[package]
name = "sorensen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10"
sha2 = "0.10.2"
digest = "0.10.3"
base16ct = { version = "0.1.1", features = ["alloc"] }

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "initial_benchmark"
harness = false
